--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 node_modules/
 .aws-sam/*
-.aws-sam/build.toml
 .vscode
 Processor/.aws-sam/build/
 .env
 package-lock.json
 samconfig.toml
+Processor/.aws-sam/build.toml
