--- a/Processor/ProcessorFunctions/package.json
+++ b/Processor/ProcessorFunctions/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "import-function",
+  "name": "processor-functions",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
-  "author": "AWS Serverless",
+  "author": "Valerio Mellini",
   "license": "MIT-0",
   "dependencies": {
     "aws-sdk": "^2.1069.0",
     "papaparse": "^5.4.1"
+  },
+  "devDependencies": {
+    "mocha": "^10.2.0"
   }
 }
